# zero_hour_assault_src

./: .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  build_pc.py  buildozer.spec  changelog.txt  dev_tool.py  main.py  manage.bat  manage.sh  oalsoft_hrtf_48000.mhr  pack_sounds.py  privacy.txt  pyproject.toml  readme.html  rules.txt  to do list.txt  unpack_sounds.py  uploader.py  zero_hour_assault.jkm
.github/workflows/: build.yml
lang/: Arabic.lng  KTR.lng  PTBRAtualizada.lng  Română.lng  Serbian.lng  Spanish.lng  Turkish.lng  Vietnamese.lng  brasileiro.lng  dutch.lng  en.lng  español-no-oficial.lng  fronçé.lng  indonesia.lng  lng.lng  português-somente-para-testes-de-tradução.lng  português.lng  ptbr_trinite.lng  russian.lng  russian_official.lng  said99.lng  short.lng  shorted.lng  vn.lng  العربية_الفصحى.lng  القوانين.lng  تحديثات.lng  تعريب_العربية.lng
scratch/: reorganize_and_split.py  super_split.py  test_checks.py
server/: bike.py  bodyfall.py  file_directories.py  getfiles.py  globals.py  grenade.py  group.py  guns.py  map.py  migrate_to_sqlite.py  molotof.py  motd_update.php  motor.py  moving_sound_serverside_handler.py  network.py  pathfinder.py  player.py  rotation.py  server.conf  server.private.key  server.public.key  telegram_bot.py  test.db-journal  timebomb.py  transit.py  weapon.py  zha_players.db-shm  zha_players.db-wal  zhaserver.py  zhaserver.py.bak
server/dashboard/: app.py
server/data/: match_modes.json
server/lang/: 1250.lng  Arabic.lng  Romanian.lng  Română.lng  Serbian.lng  Spanish.lng  Victoric.lng  Vietnamese.lng  (+24 more)
(+219 files in other folders)
