[project]
name = "zero-hour-assault"
version = "1.5.9.6"
description = "Zero Hour Assault - Cleaned public source release"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pygame>=2.5.0",
    "wxpython>=4.2.1",
    "pycryptodomex>=3.20.0",
    "deep-translator>=1.11.4",
    "pyaudio>=0.2.14",
    "opuslib>=0.4.3",
    "soundfile>=0.12.1",
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
    "wmi>=1.5.1",
    "pywin32>=306",
    "python-vlc>=3.0.20119",
    "pafy>=0.5.5",
    "youtube-dl",
    "cffi>=1.16.0",
    "pycparser>=2.21",
    "numpy>=1.26.0",
    "psutil>=5.9.8",
    "pyenet>=1.3.17",
    "PyNaCl>=1.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["zero_hour_assault"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
